--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+  <head>
+    <title><h1 style="color:blue;"> GroupCast Sports </h1></title>
+    <META http-equiv="Content-Type" content="text/html;charset=ISO8859-1">
+  </head>
+    
