--- a/index.html
+++ b/index.html
@@ -4,4 +4,14 @@
     <title><h1 style="color:blue;"> GroupCast Sports </h1></title>
     <META http-equiv="Content-Type" content="text/html;charset=ISO8859-1">
   </head>
+  <body>
+    <h3> Sports News </h3>
+    <p> Stay updated on all things in the sports world right here with <i> GroupCast Sports! </i> 
+      From the depths of Mississippi high school football to headline news in the NBA, our
+      journalists strive to provide you with the best interviews and insight possible on a 
+      daily basis. From our different series including Tiger Talk and Hot Seat, there will 
+      always be something for YOU! 
+    </p>
+</html> 
+      
     
