--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <title><h1 style="color:blue;"> GroupCast Sports </h1></title>
     <META http-equiv="Content-Type" content="text/html;charset=ISO8859-1">
-  </head>
   
-  <style type="text/css">
+  <style>
   
   body{ margin-top: 7em; padding-left: 2em; 
   color: #0080FF; background-color: #A4A4A4; 
@@ -24,6 +23,8 @@
  
   
   </style>
+  
+  </head>
  
   <body>
   	
