--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   body{ margin-top: 5em; padding-left: 2em; 
   color: #0080FF; background-color: #A4A4A4; 
   font-family: Georgia; }
-  h1 { font-family: Georgia; color:blue; font-size:300%}
-  h2 { font-family: Georgia; color:blue; font-size:200%}
+  h1 { font-family: Georgia; color:blue; font-size:300%; text-align:center}
+  h2 { font-family: Georgia; color:blue; font-size:200%; text-align:center}
   p {font-family: Georgia; }
   ul.navbar { list-style-type: none; padding-left: 1.5em; margin:0;
   position: absolute; top: 2em; left: 1em;
