--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   p {font-family: Georgia; }
   a:link {color: #2E64FE }
   a:visited {color: #013ADF }      
+              div {text-align:center }            
   
   table {width: 100%;}
   th {height: 50px;}
@@ -101,7 +102,7 @@
     <p><img src="CarisLavert.jpeg" alt="Caris Lavert" style="display:block;
      margin-left: auto; margin-right: auto;></p>            
     
-    <div style="text-align:center">         
+    <div>         
     <p> Image courtesy of USA Today </p>
     </div>            
     
