--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     
     <h2> GroupCast's Player to Watch </h2>
    
-    <p><img src="CarisLavert.jpeg" alt="Caris Lavert" style="display:block;
+    <p><img src="CarisLavert.jpeg" alt="Caris Lavert" height="42" width="42" 
+     style="display:block;
      margin-left: auto; margin-right: auto;></p>            
     
     <div style="text-align:center">         
