--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     
     <h2> GroupCast's Player to Watch </h2>
    
-    <p><img src="CarisLavert.jpeg" alt="Caris Lavert" height="400" width="550" 
+    <p><img src="CarisLavert.jpeg" alt="Caris Lavert" 
      style="display:block;
      margin-left: auto; margin-right: auto;></p>            
     
