--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   h2 { font-family: Georgia; color:blue; font-size:200%; text-align:center}
   p {font-family: Georgia; }
   a:link {color: #2E64FE }
-  a:visited {color: #013ADF }      
+  a:visited {color: #013ADF }     
+              div.a {text-align:center }
   
   table {width: 100%;}
   th {height: 50px;}
@@ -102,7 +103,7 @@
      style="display:block;
      margin-left: auto; margin-right: auto;></p>            
     
-    <div style="text-align:center">         
+    <div class="a">         
     <p> Image courtesy of USA Today </p>
     </div>            
     
