--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   p {font-family: Georgia; }
   a:link {color: #2E64FE }
   a:visited {color: #013ADF }     
-              div.a {text-align:center }
+              div.a {text-align:center; }
   
   table {width: 100%;}
   th {height: 50px;}
-              td {text-align: center}
+              td {text-align: center;}
             
   
   </style>
