--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
     <p> Image courtesy of USA Today </p>
     </div>            
     
-    <p> A sometimes forgotten player for the Brooklyn Nets, Caris Lavert
+    <p> A sometimes forgotten player for the Brooklyn Nets, <span style="color:white;font-weight:bold">
+    Caris Lavert </span>
     will be a key factor if the Nets wish to upset the Philadelphia
     76ers in the first round. After averaging 13.7 points, 3.9 assists,
     and 3.8 rebounds in his shortened regular season run, Lavert will 
